<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>io.bitken</groupId>
  <artifactId>shipsmooth</artifactId>
  <version>0.3.11</version>
  <packaging>pom</packaging>

  <modules>
    <module>integrations/common</module>
    <module>integrations/claude</module>
    <module>integrations/gemini</module>
    <module>packaging</module>
    <module>devel</module>
    <module>app</module>
  </modules>

  <properties>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <plugin.base.name>shipsmooth</plugin.base.name>
    <plugin.skill.start.basename>start</plugin.skill.start.basename>
    <skip.copy-dist>true</skip.copy-dist>
    <skip.copy-plugin-meta>true</skip.copy-plugin-meta>
  </properties>

  <build>
    <pluginManagement>
      <plugins>
        <!-- Pinned to prevent Maven resolving latest from central on direct exec:java@id invocations -->
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>exec-maven-plugin</artifactId>
          <version>3.3.0</version>
        </plugin>
        <!-- Canonical compiler version; app overrides with its own property -->
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.13.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.3.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.2.5</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-antrun-plugin</artifactId>
          <version>3.1.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.4.1</version>
        </plugin>
        <!-- Implicit lifecycle plugins — pinned to satisfy requirePluginVersions -->
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-clean-plugin</artifactId>
          <version>3.2.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-install-plugin</artifactId>
          <version>3.1.2</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>3.1.2</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-site-plugin</artifactId>
          <version>3.12.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-enforcer-plugin</artifactId>
          <version>3.5.0</version>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-enforcer-plugin</artifactId>
        <executions>
          <execution>
            <id>enforce-plugin-versions</id>
            <goals><goal>enforce</goal></goals>
            <configuration>
              <rules>
                <requirePluginVersions/>
                <dependencyConvergence/>
              </rules>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>dev</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <properties>
        <build.env>dev</build.env>
        <build.platform>claude</build.platform>
        <build.os>posix</build.os>
        <skip.copy-dist>false</skip.copy-dist>
        <skip.copy-plugin-meta>false</skip.copy-plugin-meta>
        <plugin.name>${plugin.base.name}-dev</plugin.name>
        <marketplace.name>shipsmooth-dev</marketplace.name>
        <marketplace.description>Development marketplace for bitkentech/shipsmooth plugin</marketplace.description>
        <plugin.description>Agent coding workflow (dev build)</plugin.description>
        <build.outputDir>${maven.multiModuleProjectDirectory}/build</build.outputDir>
        <plugin.hook.base>node "${CLAUDE_PLUGIN_ROOT}/dist/session-start.js"</plugin.hook.base>
        <shipsmooth.dist.path>\${CLAUDE_PLUGIN_DATA}/dist</shipsmooth.dist.path>
        <shipsmooth.jlink.dir>${maven.multiModuleProjectDirectory}/app/target/jlink-image</shipsmooth.jlink.dir>
        <shipsmooth.cli.bin>${XDG_CACHE_HOME:-~/.cache}/shipsmooth-dev/runtime-@project.version@/bin/shipsmooth</shipsmooth.cli.bin>
        <skill.frontmatter></skill.frontmatter>
        <experimental.enabled>true</experimental.enabled>
      </properties>
    </profile>

    <profile>
      <id>gemini-dev</id>
      <properties>
        <build.env>dev</build.env>
        <build.platform>gemini</build.platform>
        <build.os>posix</build.os>
        <skip.copy-dist>false</skip.copy-dist>
        <skip.copy-plugin-meta>false</skip.copy-plugin-meta>

        <build.outputDir>${maven.multiModuleProjectDirectory}/build-gemini-dev</build.outputDir>

        <plugin.name>${plugin.base.name}-dev</plugin.name>
        <plugin.description>Agent coding workflow (dev build)</plugin.description>
        <plugin.hook.base>node "${extensionPath}/dist/session-start.js"</plugin.hook.base>

        <shipsmooth.jlink.dir>${maven.multiModuleProjectDirectory}/app/target/jlink-image</shipsmooth.jlink.dir>
        <skill.frontmatter>---
name: start-dev
description: Use when starting any task — applies the shipsmooth agent coding workflow (dev build).
---</skill.frontmatter>
        <experimental.enabled>true</experimental.enabled>
      </properties>
    </profile>

    <profile>
      <id>prod</id>
      <properties>
        <build.env>prod</build.env>
        <build.platform>claude</build.platform>
        <build.os>posix</build.os>
        <skip.copy-dist>false</skip.copy-dist>
        <skip.copy-plugin-meta>false</skip.copy-plugin-meta>
        <plugin.name>${plugin.base.name}</plugin.name>
        <marketplace.name>bitkentech</marketplace.name>
        <marketplace.description>Plugin marketplace for bitkentech/shipsmooth</marketplace.description>
        <plugin.description>Agent coding workflow with plan-before-implement discipline, TDD, vertical slices, Linear integration, and immutable git-based plan versioning.</plugin.description>
        <build.outputDir>${maven.multiModuleProjectDirectory}/build</build.outputDir>
        <shipsmooth.dist.path>\${CLAUDE_PLUGIN_DATA}/dist</shipsmooth.dist.path>
        <shipsmooth.jlink.dir>/dev/null</shipsmooth.jlink.dir>
        <shipsmooth.cli.bin>${XDG_CACHE_HOME:-~/.cache}/shipsmooth/runtime-@project.version@/bin/shipsmooth</shipsmooth.cli.bin>
        <plugin.hook.base>node "${CLAUDE_PLUGIN_ROOT}/dist/session-start.js"</plugin.hook.base>
        <skill.frontmatter></skill.frontmatter>
        <experimental.enabled>false</experimental.enabled>
      </properties>
    </profile>
    <profile>
      <id>windows</id>
      <properties>
        <build.env>prod</build.env>
        <build.platform>claude</build.platform>
        <build.os>windows</build.os>
        <skip.copy-dist>true</skip.copy-dist>
        <skip.copy-plugin-meta>false</skip.copy-plugin-meta>
        <plugin.name>${plugin.base.name}</plugin.name>
        <marketplace.name>bitkentech</marketplace.name>
        <marketplace.description>Plugin marketplace for bitkentech/shipsmooth-windows</marketplace.description>
        <plugin.description>Agent coding workflow (Windows)</plugin.description>
        <build.outputDir>${maven.multiModuleProjectDirectory}/build-windows</build.outputDir>
        <plugin.repo.name>${plugin.base.name}</plugin.repo.name>
        <shipsmooth.jlink.dir>${maven.multiModuleProjectDirectory}/app/target/jlink-image-windows-x64</shipsmooth.jlink.dir>
        <skill.frontmatter></skill.frontmatter>
        <experimental.enabled>false</experimental.enabled>
      </properties>
    </profile>

    <profile>
      <id>gemini</id>
      <properties>
        <build.env>prod</build.env>
        <build.platform>gemini</build.platform>
        <build.os>posix</build.os>
        <skip.copy-dist>false</skip.copy-dist>
        <skip.copy-plugin-meta>false</skip.copy-plugin-meta>
        <plugin.description>Agent coding workflow with plan-before-implement discipline, TDD, vertical slices, Linear integration, and immutable git-based plan versioning.</plugin.description>
        <build.outputDir>${maven.multiModuleProjectDirectory}/build-gemini</build.outputDir>
        <shipsmooth.dist.path>~/.cache/shipsmooth/dist</shipsmooth.dist.path>
        <plugin.hook.base>node "${extensionPath}/dist/session-start.js"</plugin.hook.base>
<skill.frontmatter>---
name: start
description: Use when starting any task — applies the shipsmooth agent coding workflow.
---</skill.frontmatter>
        <experimental.enabled>false</experimental.enabled>
      </properties>
    </profile>
  </profiles>

</project>
